--- a/index_4.html
+++ b/index_4.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style_4.css">
 	<link href="https://fonts.googleapis.com/css?
 	family=open+sans:600.,700" rel="stylesheet">
