--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
 <head>
+	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+	<meta content="utf-8" http-equiv="encoding">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="manifest" href="manifest.json">
 	<link rel="stylesheet" type="text/css" href="style_4.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-	<title>A Simple Calculator</title>
+	<title>Baisc js Calculator</title>
 </head>
 <body>
 	<div class="container">
