--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<meta name="apple-mobile-web-app-title" content="Calculator PWA">
+	<meta name="theme-color" content="#52c781" />
+	<link rel="apple-touch-icon" href="./assets/images/icons/icon-152x152.png">
+	<meta name="description" content="Basic js Calculator">
+	<!-- https://web.dev/defer-non-critical-css/ -->
+	
+	<!-- <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="preload" href="./assets/css/style_4.css" as="style" onload="this.onload=null;this.rel='stylesheet'"> -->
+	<link rel="stylesheet" type="text/css" href="./assets/css/style_4.css">
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
+	
+<!-- 	<noscript>
+			<link rel="stylesheet" type="text/css" href="./assets/css/style_4.css">
+			<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
+	</noscript> -->
+	
 	<link rel="manifest" href="manifest.json">
-	<link rel="stylesheet" type="text/css" href="style_4.css">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+	
 	<title>Baisc js Calculator</title>
 </head>
 <body>
@@ -43,7 +61,8 @@
 			</div>
 		</div>
 	</div>
-	<script src="calcScript.js"></script>
+	<script src="./assets/js/index.js"></script>
+	<script src="./assets/js/calcScript.js"></script>
 
 </body>
 </html>
