--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta name="apple-mobile-web-app-title" content="Calculator PWA">
 	<meta name="theme-color" content="#52c781" />
 	<link rel="apple-touch-icon" href="./assets/images/icons/icon-152x152.png">
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<meta name="description" content="Basic js Calculator">
 	<!-- https://web.dev/defer-non-critical-css/ -->
 	
